[project]
name = "atelier1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "ipykernel>=7.1.0",
    "kagglehub>=0.4.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
